edits to project 2
