# controllers/game.js
@@ -1,13 +1,7 @@
 const db = require('../models/server');
 const Game = db.games;
 
-const apiKey =
-  'Ezl0961tEpx2UxTZ5v2uKFK91qdNAr5npRlMT1zLcE3Mg68Xwaj3N8Dyp1R8IvFenrVwHRllOUxF0Og00l0m9NcaYMtH6Bpgdv7N';
-
 exports.create = (req, res) => {
-   /*
-    #swagger.description = 'API Key if needed: Ezl0961tEpx2UxTZ5v2uKFK91qdNAr5npRlMT1zLcE3Mg68Xwaj3N8Dyp1R8IvFenrVwHRllOUxF0Og00l0m9NcaYMtH6Bpgdv7N'
-  */
   // Validate request
   if (!req.body.name) {
     res.status(400).send({ message: 'Content can not be empty!' });
@@ -36,9 +30,9 @@ exports.create = (req, res) => {
 };
 
 exports.findAll = (req, res) => {
-  console.log(req.header('apiKey'));
-  if (req.header('apiKey') === apiKey) {
-    Game.find(
+    // console.log erase
+  console.log("anything in there"); 
+  Game.find(
       {},
       {
         game_id: 1,
@@ -57,31 +51,25 @@ exports.findAll = (req, res) => {
             err.message || 'Some error occurred while retrieving games.',
         });
       });
-  } else {
-    res.send('Invalid apiKey, please read the documentation.');
-  }
 };
 
 // Find a single Game with an id
 exports.findOne = (req, res) => {
-  const game_id = req.params.game_id;
-  if (req.header('apiKey') === apiKey) {
-    Game.find({ game_id: game_id })
+  // console.log erase
+  console.log("find one game");
+    Game.find({ game_id: req.params.game_id })
       .then((data) => {
         if (!data)
           res
             .status(404)
-            .send({ message: 'Not found Game with id ' + game_id });
+            .send({ message: 'Not found Game with id ' + req.params.game_id });
         else res.send(data[0]);
       })
       .catch((err) => {
         res.status(500).send({
-          message: 'Error retrieving Game with game_id=' + game_id,
+          message: 'Error retrieving Game with game_id=' + req.params.game_id,
         });
       });
-  } else {
-    res.send('Invalid apiKey, please read the documentation.');
-  }
 };
 
 // // Update a Game by the id in the request
