# controllers/user.js
@@ -1,13 +1,7 @@
 const db = require('../models/server');
 const User = db.users;
 
-const apiKey =
-  'Ezl0961tEpx2UxTZ5v2uKFK91qdNAr5npRlMT1zLcE3Mg68Xwaj3N8Dyp1R8IvFenrVwHRllOUxF0Og00l0m9NcaYMtH6Bpgdv7N';
-
 exports.create = (req, res) => {
-   /*
-    #swagger.description = 'API Key if needed: Ezl0961tEpx2UxTZ5v2uKFK91qdNAr5npRlMT1zLcE3Mg68Xwaj3N8Dyp1R8IvFenrVwHRllOUxF0Og00l0m9NcaYMtH6Bpgdv7N'
-  */
   // Validate request
   if (!req.body.name) {
     res.status(400).send({ message: 'Content can not be empty!' });
@@ -36,8 +30,6 @@ exports.create = (req, res) => {
 };
 
 exports.findAll = (req, res) => {
-  console.log(req.header('apiKey'));
-  if (req.header('apiKey') === apiKey) {
     User.find(
       {},
       {
@@ -57,31 +49,23 @@ exports.findAll = (req, res) => {
             err.message || 'Some error occurred while retrieving users.',
         });
       });
-  } else {
-    res.send('Invalid apiKey, please read the documentation.');
-  }
 };
 
 // Find a single User with an id
 exports.findOne = (req, res) => {
-  const user_id = req.params.user_id;
-  if (req.header('apiKey') === apiKey) {
-    User.find({ user_id: user_id })
+    User.find({ user_id: req.params.user_id })
       .then((data) => {
         if (!data)
           res
             .status(404)
-            .send({ message: 'Not found User with id ' + user_id });
+            .send({ message: 'Not found User with id ' + req.params.user_id });
         else res.send(data[0]);
       })
       .catch((err) => {
         res.status(500).send({
-          message: 'Error retrieving User with user_id=' + user_id,
+          message: 'Error retrieving User with user_id=' + req.params.user_id,
         });
       });
-  } else {
-    res.send('Invalid apiKey, please read the documentation.');
-  }
 };
 
 // // Update a User by the id in the request
